# armadillo-4ffi

./: CMakeLists.txt  README.md  main.cpp
arma4ffi/: arma4ffi.cpp  arma4ffi.h
